Data fetching filtered by category using custom hook

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "eslint:reccomended",
     "plugin:import/errors",
     "plugin:react/recommended",
+    "plugin: react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
     "prettier"
   ],
