--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build:client": "vite build --outDir ./dist/client",
-    "build:server": "vite build --outDir ./dist/server --ssr src/ServerApp.jsx",
-    "build": "npm run build:client && npm run build:server",
-    "start": "node server.js",
+    "build": "vite build",
     "lint": "eslint \"src/**/*.(js,jsx)\" --quiet",
     "format": "prettier --write \"src/**/*.{js,jsx}",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -32,10 +28,12 @@
     "vite": "^3.1.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@tanstack/react-query": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1"
   }
 }
